# binance-sdk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  release.yml
binance/: api.py
binance/cm_future/: __init__.py  _account.py  _market.py  _trade.py
binance/lib/: authentication.py  utils.py  websocket.py
binance/pm_future/: __init__.py  _account.py  _cm_trade.py  _um_trade.py  _user_data_streams.py
binance/spot/: __init__.py  _convert.py  _gift_card.py  _margin.py  _market.py  _mining.py  _sub_account.py  _trade.py
binance/um_future/: __init__.py  _account.py  _market.py  _trade.py
binance/websocket/: binance_socket_manager.py
binance/websocket/spot/: websocket_stream.py
binance/websocket/spot/websocket_api/: _trade.py
docs/source/: CHANGELOG.rst  binance.spot.auto_invest.rst  conf.py  getting_started.rst  index.rst  intro.rst
examples/spot/trade/: get_account.py
examples/websocket/spot/websocket_api/: app_demo.py
tests/: test_api.py
