[project]
name = "sidan-binance-sdk"
version = "0.0.1"
description = "Modern, lightweight Python SDK for Binance public API - Fork of binance-connector with enhanced tooling and packaging"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Binance" },
    { name = "Fork Maintainer", email = "maintainer@example.com" }
]
keywords = ["Binance", "Public API", "SDK", "Trading", "Cryptocurrency", "WebSocket"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "websocket-client>=1.6.3",
    "pycryptodome>=3.15.0",
]

[project.urls]
Homepage = "https://github.com/sidan-lab/sidan-binance-sdk"
Repository = "https://github.com/sidan-lab/sidan-binance-sdk"
Documentation = "https://sidan-lab.github.io/sidan-binance-sdk/"
"Bug Tracker" = "https://github.com/sidan-lab/sidan-binance-sdk/issues"
"Original Connector" = "https://github.com/binance/binance-connector-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["binance"]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
    "pytest>=6.0",
    "responses>=0.13.0",
    "sure>=2.0.0",
    "pre-commit>=3.5.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
exclude = [
    "tests/",
    "examples/",
    "docs/",
    "binance/websocket/spot/websocket_api/__init__.py",
]
